WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200215
UI process occasionally hangs in -[UIKeyboardTaskQueue lockWhenReadyForMainThread]
https://bugs.webkit.org/show_bug.cgi?id=200215
Summary
UI process occasionally hangs in -[UIKeyboardTaskQueue lockWhenReadyForMainTh...
Wenson Hsieh
Reported
2019-07-28 21:40:56 PDT
<
rdar://problem/52976965
>
Attachments
Patch
(30.01 KB, patch)
2019-07-28 22:48 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Patch
(29.92 KB, patch)
2019-07-28 22:54 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Much simpler approach
(5.93 KB, patch)
2019-07-29 07:52 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-07-28 22:48:54 PDT
Comment hidden (obsolete)
Created
attachment 375061
[details]
Patch
Wenson Hsieh
Comment 2
2019-07-28 22:54:10 PDT
Comment hidden (obsolete)
Created
attachment 375062
[details]
Patch
Maciej Stachowiak
Comment 3
2019-07-29 00:53:38 PDT
Comment on
attachment 375062
[details]
Patch Is there a way to make a test case for this fix?
Wenson Hsieh
Comment 4
2019-07-29 07:25:23 PDT
(In reply to Maciej Stachowiak from
comment #3
)
> Comment on
attachment 375062
[details]
> Patch > > Is there a way to make a test case for this fix?
It should be doable but…tricky, since the bug as-is relies on code in Safari. I’ll need to find a way to mock this either from layout tests, or API tests.
Wenson Hsieh
Comment 5
2019-07-29 07:52:30 PDT
Created
attachment 375074
[details]
Much simpler approach
Tim Horton
Comment 6
2019-07-29 11:41:16 PDT
Wenson is working on a test for a follow-up.
Wenson Hsieh
Comment 7
2019-07-29 11:41:52 PDT
Comment on
attachment 375074
[details]
Much simpler approach Thanks for the review! I’m working on a test right now, which I’ll land in a separate patch.
WebKit Commit Bot
Comment 8
2019-07-29 12:12:47 PDT
Comment on
attachment 375074
[details]
Much simpler approach Clearing flags on attachment: 375074 Committed
r247914
: <
https://trac.webkit.org/changeset/247914
>
WebKit Commit Bot
Comment 9
2019-07-29 12:12:48 PDT
All reviewed patches have been landed. Closing bug.
Wenson Hsieh
Comment 10
2019-07-29 15:27:54 PDT
(In reply to Wenson Hsieh from
comment #7
)
> Comment on
attachment 375074
[details]
> Much simpler approach > > Thanks for the review! > > I’m working on a test right now, which I’ll land in a separate patch.
=>
webkit.org/b/200245
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug